--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-battery": "~6.3.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-paper": "^4.12.5",
-    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-dom": "18.0.0",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
