--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.2.0",
     "expo": "~46.0.16",
     "expo-battery": "~6.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.11",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-super-grid": "^5.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "react-dom": "18.0.0",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
