--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-super-grid": "^5.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
