--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^5.0.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
