--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.2.0",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "^48.0.4",
     "expo-battery": "~7.1.1",
     "expo-status-bar": "~1.4.4",
