--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-elements": "^3.4.3",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.5.0",
@@ -32,7 +33,8 @@
     "react-native-super-grid": "^5.0.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
