--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "expo-location": "~15.1.1"
+    "expo-location": "~15.1.1",
+    "expo-notifications": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
