--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "^48.0.4",
     "expo-battery": "~7.1.1",
+    "expo-device": "^5.2.1",
+    "expo-location": "~15.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-task-manager": "~11.1.1",
     "firebase": "^9.6.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,8 +38,7 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "expo-location": "~15.1.1",
-    "expo-notifications": "~0.18.1"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
