managed to send messages and able to show list of messages

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "HelpMeet",
     "slug": "FinalYearAPP",
     "version": "1.0.0",
-    "orientation": "all",
+    "orientation": "portrait",
     "icon": "./assets/1024.png",
     "userInterfaceStyle": "light",
     "splash": {
