Managed to store messages in sqlite storage for both type users

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "HelpMeet",
     "slug": "helpmeet",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/ic_launcher.png",
     "userInterfaceStyle": "light",
     "splash": {
