--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/ic_launcher.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/ic_launcher.png",
+      "image": "./assets/1024.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -45,7 +45,7 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermission": "Allow HelpMeet to use your location."
+          "locationAlwaysAndWhenInUsePermission": "Allow HelpMeet to use your location for services."
         }
       ]
     ],
