--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.1",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.0",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "^48.0.4",
+    "expo-av": "~13.2.1",
     "expo-battery": "~7.1.1",
     "expo-device": "^5.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-notifications": "~0.18.1",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-task-manager": "~11.1.1",
     "firebase": "^9.6.11",
@@ -30,15 +37,16 @@
     "react-native": "0.71.3",
     "react-native-elements": "^3.4.3",
     "react-native-ionicons": "^4.6.5",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-super-grid": "^5.0.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "socket.io-client": "^4.6.1",
-    "expo-sqlite": "~11.1.1"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
